--- a/src/br/com/wss/viwer/frmPrincipal.form
+++ b/src/br/com/wss/viwer/frmPrincipal.form
@@ -261,10 +261,12 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jLComputador" min="-2" pref="238" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="191" max="-2" attributes="0"/>
+                  <Component id="jLComputador" min="-2" pref="225" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                  <Component id="jLabelServidor" min="-2" pref="238" max="-2" attributes="0"/>
+                  <EmptySpace pref="36" max="32767" attributes="0"/>
                   <Component id="jLUsuario" min="-2" pref="259" max="-2" attributes="0"/>
-                  <EmptySpace pref="217" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="114" max="-2" attributes="0"/>
                   <Component id="jLData" min="-2" pref="157" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                   <Component id="jLHora" min="-2" pref="132" max="-2" attributes="0"/>
@@ -278,6 +280,7 @@
                   <Component id="jLComputador" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLData" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLHora" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabelServidor" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -301,6 +304,11 @@
         <Component class="javax.swing.JLabel" name="jLHora">
           <Properties>
             <Property name="text" type="java.lang.String" value="Hora"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabelServidor">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Servidor"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -327,7 +335,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <Component id="jScrollPane1" min="-2" pref="217" max="-2" attributes="0"/>
-                  <EmptySpace min="0" pref="284" max="32767" attributes="0"/>
+                  <EmptySpace min="0" pref="285" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
